--- a/web/static/player.html
+++ b/web/static/player.html
@@ -10,54 +10,99 @@
     <script type="text/javascript" src="js/fps_runner.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <style>
+        .nav-bar {
+            background-color: #333;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .nav-links {
+            display: flex;
+            gap: 20px;
+        }
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+            padding: 8px 12px;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+        .nav-links a:hover {
+            background-color: #555;
+        }
+        .nav-links a.active {
+            color: rgb(32 32 25);
+            background-color: #83af4c;
+        }
+        .logo {
+            color: white;
+            font-weight: bold;
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
-
-<div class="main">
-    <div id="player_frame">
-        <canvas id="player">
-        </canvas>
-
-
-        <div id="bars">
-            <div id="load_bar">
-                <div id="playhead"></div>
-            </div>
-            <div id="prog_bar"></div>
-            <div id="scrub_bar"></div>
+    <!-- Navigation Bar -->
+    <nav class="nav-bar">
+        <div class="logo">ASCII Art Studio</div>
+        <div class="nav-links">
+            <a href="player.html" class="active">
+                <i class="material-icons" style="vertical-align: middle; font-size: 18px;">movie</i>
+                Player
+            </a>
+            <a href="converter.html">
+                <i class="material-icons" style="vertical-align: middle; font-size: 18px;">image</i>
+                Image Converter
+            </a>
         </div>
+    </nav>
 
-        <div class="controls">
-            <button id="start" title="Restart Video" class="large">first_page</button>
-            <button id="prev_frame" title="Previous Frame" class="large">chevron_left</button>
+    <div class="main">
+        <div id="player_frame">
+            <canvas id="player">
+            </canvas>
 
-            <button id="pause" title="Pause / Play">
-                <span id="pause_button">pause_circle_outline</span>
-                <span id="play_button">play_circle_outline</span>
-            </button>
-
-            <button id="next_frame" title="Next Frame" class="large">chevron_right</button>
-            <button id="end" title="Go to End"  class="large">last_page</button>
-
-            <span class="tools">
-                <button id="view_grid" title="View Grid"  class="small">grid_4x4</button>
-                <button id="show_palette" title="Show Palette" class="small">palette</button>
-            </span>
-
-            <div id="palette">
-                <canvas id="palette_canvas">
-                </canvas>
+            <div id="bars">
+                <div id="load_bar">
+                    <div id="playhead"></div>
+                </div>
+                <div id="prog_bar"></div>
+                <div id="scrub_bar"></div>
             </div>
 
-            <div class="frame_counter_div">frame:<input type="text" value="0" id="frame_counter"></div>
+            <div class="controls">
+                <button id="start" title="Restart Video" class="large">first_page</button>
+                <button id="prev_frame" title="Previous Frame" class="large">chevron_left</button>
+
+                <button id="pause" title="Pause / Play">
+                    <span id="pause_button">pause_circle_outline</span>
+                    <span id="play_button">play_circle_outline</span>
+                </button>
+
+                <button id="next_frame" title="Next Frame" class="large">chevron_right</button>
+                <button id="end" title="Go to End"  class="large">last_page</button>
+
+                <span class="tools">
+                    <button id="view_grid" title="View Grid"  class="small">grid_4x4</button>
+                    <button id="show_palette" title="Show Palette" class="small">palette</button>
+                </span>
+
+                <div id="palette">
+                    <canvas id="palette_canvas">
+                    </canvas>
+                </div>
+
+                <div class="frame_counter_div">frame:<input type="text" value="0" id="frame_counter"></div>
+            </div>
+
         </div>
 
+        <img id="charset" width="0" height="0"/>
     </div>
-
-    <img id="charset" width="0" height="0"/>
-</div>
 
 </body>
 </html>
