Config updates for HTML ASCII converter and pipeline.
Former-commit-id: 94374d9279bd152c1d49d7f268b25041c6ebdcac

--- a/web/static/player.html
+++ b/web/static/player.html
@@ -107,6 +107,7 @@
 
     <div class="main">
         <div id="player_frame">
+            <div id="no_movie" title="No Movie Loaded" class="material-icons">web_asset_off</div>
             <canvas id="player">
             </canvas>
 
