--- a/web/static/converter.html
+++ b/web/static/converter.html
@@ -32,7 +32,7 @@
 
     <div class="container mx-auto px-4 py-8">
         <header class="text-center mb-12">
-            <h1 class="text-4xl font-bold text-white-800 mb-2">Image to ASCII Art <span class="title-converter">Converter</span></h1>
+            <h1 class="font-bold text-white-800 mb-2 title-converter">Image to ASCII Art <span><img src="static/img/converter-ascii-00.png" class="glitchy"/>Converter</span></h1>
             <p class="text-gray-600">Convert your images to beautiful ASCII art</p>
         </header>
 
@@ -57,13 +57,36 @@
                             <div class="grid grid-cols-2 gap-4 max-w-md mx-auto">
                                 <div>
                                     <label for="charCols" class="block text-sm font-medium text-gray-700 mb-1">Columns</label>
-                                    <input type="number" id="charCols" min="10" max="256" value="40"
-                                        class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                                    <input type="number" id="charCols" min="8" max="256" value="48"
+                                        class="w-full px-3 py-2 border rounded-md shadow-sm focus:border-blue-500">
                                 </div>
                                 <div>
                                     <label for="charRows" class="block text-sm font-medium text-gray-700 mb-1">Rows</label>
-                                    <input type="number" id="charRows" min="4" max="256" value="40"
-                                        class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                                    <input type="number" id="charRows" min="4" max="256" value="48"
+                                        class="w-full px-3 py-2 border rounded-md shadow-sm focus:border-blue-500">
+                                </div>
+                            </div>
+
+                            <button type="button" id="toggleAdvanced" class="w-full max-w-md mx-auto mt-2 text-sm text-blue-600 hover:text-blue-800 focus:outline-none">
+                                ▼ Advanced Settings
+                            </button>
+
+                            <div id="advancedSettings" class="hidden max-w-md mx-auto mt-2 p-4 bg-gray-50 rounded-md">
+                                <div class="space-y-4">
+                                    <div>
+                                        <label for="brightness" class="block text-sm font-medium text-gray-700 mb-1">
+                                            Brightness: <span id="brightnessValue">30</span>
+                                        </label>
+                                        <input type="range" id="brightness" min="0" max="100" value="30"
+                                            class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
+                                    </div>
+                                    <div>
+                                        <label for="contrast" class="block text-sm font-medium text-gray-700 mb-1">
+                                            Contrast: <span id="contrastValue">100</span>
+                                        </label>
+                                        <input type="range" id="contrast" min="0" max="100" value="100"
+                                            class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
+                                    </div>
                                 </div>
                             </div>
 
@@ -101,6 +124,7 @@
     </div>
 
     <!-- External JavaScript -->
+    <script src="js/title_glitch.js"></script>
     <script src="js/converter.js"></script>
 </body>
 </html>
