--- a/web/static/converter.html
+++ b/web/static/converter.html
@@ -30,94 +30,116 @@
         </div>
     </nav>
 
-    <div class="container mx-auto px-4 py-8">
-        <header class="text-center mb-12">
-            <h1 class="font-bold text-white-800 mb-2 title-converter">Image to ASCII Art <span><img src="static/img/converter-ascii-00.png" class="glitchy"/>Converter</span></h1>
-            <p class="text-gray-600">Convert your images to beautiful ASCII art</p>
-        </header>
+    <div class="main">
+        <!-- Error Message Container -->
+        <div id="error-message" class="fixed top-4 left-1/2 transform -translate-x-1/2 z-50">
+            <!-- Toasts will be inserted here by JavaScript -->
+        </div>
 
-        <div class="max-w-4xl mx-auto rounded-lg shadow-lg overflow-hidden">
-            <!-- Upload Section -->
-            <div class="p-8">
-                <form id="uploadForm" class="space-y-6">
-                    <div class="text-center">
-                        <div class="space-y-6">
-                            <div id="dropZone" class="drop-zone mx-auto">
-                                <input type="file" id="imageInput" accept=".png,.jpg,.jpeg" class="hidden" />
-                                <div class="space-y-2">
-                                    <svg class="mx-auto h-12 w-12 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
-                                    </svg>
-                                    <h3 class="text-lg font-medium text-gray-700">Drag and drop your image here</h3>
-                                    <p class="text-sm text-gray-500">or click to browse files (PNG, JPG, JPEG)</p>
-                                </div>
-                            </div>
-
-                            <!-- Character Dimension Controls -->
-                            <div class="grid grid-cols-2 gap-4 max-w-md mx-auto">
-                                <div>
-                                    <label for="charCols" class="block text-sm font-medium text-gray-700 mb-1">Columns</label>
-                                    <input type="number" id="charCols" min="8" max="256" value="48"
-                                        class="w-full px-3 py-2 border rounded-md shadow-sm focus:border-blue-500">
-                                </div>
-                                <div>
-                                    <label for="charRows" class="block text-sm font-medium text-gray-700 mb-1">Rows</label>
-                                    <input type="number" id="charRows" min="4" max="256" value="48"
-                                        class="w-full px-3 py-2 border rounded-md shadow-sm focus:border-blue-500">
-                                </div>
-                            </div>
-
-                            <button type="button" id="toggleAdvanced" class="w-full max-w-md mx-auto mt-2 text-sm text-blue-600 hover:text-blue-800 focus:outline-none">
-                                ▼ Advanced Settings
-                            </button>
-
-                            <div id="advancedSettings" class="hidden max-w-md mx-auto mt-2 p-4 bg-gray-50 rounded-md">
-                                <div class="space-y-4">
-                                    <div>
-                                        <label for="brightness" class="block text-sm font-medium text-gray-700 mb-1">
-                                            Brightness: <span id="brightnessValue">30</span>
-                                        </label>
-                                        <input type="range" id="brightness" min="0" max="100" value="30"
-                                            class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
-                                    </div>
-                                    <div>
-                                        <label for="contrast" class="block text-sm font-medium text-gray-700 mb-1">
-                                            Contrast: <span id="contrastValue">100</span>
-                                        </label>
-                                        <input type="range" id="contrast" min="0" max="100" value="100"
-                                            class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <button type="submit" class="w-full max-w-md mx-auto flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                                Convert to ASCII Art
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-
-            <!-- Loading State -->
-            <div id="loading" class="hidden p-8 text-center">
-                <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-blue-600 mx-auto mb-4"></div>
-                <p class="text-gray-600">Converting your image to ASCII art...</p>
-            </div>
-
-            <!-- Result Section -->
-            <div id="result" class="hidden p-8 border-t border-gray-200">
-                <div class="flex justify-between items-center mb-4">
-                    <h3 class="text-lg font-medium text-gray-800">Your ASCII Art</h3>
-                    <button id="copyBtn" class="px-3 py-1 text-sm bg-gray-100 hover:bg-gray-200 rounded">
-                        Copy to Clipboard
+        <!-- Toast Template -->
+        <template id="toast-template">
+            <div class="toast">
+                <div class="toast-header">
+                    <strong class="toast-title"></strong>
+                    <button type="button" class="toast-close" aria-label="Close">
+                        <svg class="toast-close-icon" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
+                        </svg>
                     </button>
                 </div>
-                <div class="result-container">
-                    <pre id="asciiOutput" class="ascii-output text-green-400 text-sm"></pre>
+                <div class="toast-body"></div>
+            </div>
+        </template>
+
+        <div class="container mx-auto px-4 py-8">
+            <header class="text-center mb-12">
+                <h1 class="font-bold text-white-800 mb-2 title-converter">Image to ASCII Art <span><img src="static/img/converter-ascii-00.png" class="glitchy"/>Converter</span></h1>
+                <p class="text-gray-600">Convert your images to beautiful ASCII art</p>
+            </header>
+
+            <div class="max-w-4xl mx-auto rounded-lg shadow-lg overflow-hidden">
+                <!-- Upload Section -->
+                <div class="p-8">
+                    <form id="uploadForm" class="space-y-6">
+                        <div class="text-center">
+                            <div class="space-y-6">
+                                <div id="dropZone" class="drop-zone mx-auto">
+                                    <input type="file" id="imageInput" accept=".png,.jpg,.jpeg" class="hidden" />
+                                    <div class="space-y-2">
+                                        <svg class="mx-auto h-12 w-12 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                                        </svg>
+                                        <h3 class="text-lg font-medium text-gray-700">Drag and drop your image here</h3>
+                                        <p class="text-sm text-gray-500">or click to browse files (PNG, JPG, JPEG)</p>
+                                    </div>
+                                </div>
+
+                                <!-- Character Dimension Controls -->
+                                <div class="grid grid-cols-2 gap-4 max-w-md mx-auto">
+                                    <div>
+                                        <label for="charCols" class="block text-sm font-medium text-gray-700 mb-1">Columns</label>
+                                        <input type="number" id="charCols" min="8" max="256" value="48"
+                                            class="w-full px-3 py-2 border rounded-md shadow-sm focus:border-blue-500">
+                                    </div>
+                                    <div>
+                                        <label for="charRows" class="block text-sm font-medium text-gray-700 mb-1">Rows</label>
+                                        <input type="number" id="charRows" min="4" max="256" value="48"
+                                            class="w-full px-3 py-2 border rounded-md shadow-sm focus:border-blue-500">
+                                    </div>
+                                </div>
+
+                                <button type="button" id="toggleAdvanced" class="w-full max-w-md mx-auto mt-2 text-sm text-blue-600 hover:text-blue-800 focus:outline-none">
+                                    ▼ Advanced Settings
+                                </button>
+
+                                <div id="advancedSettings" class="hidden max-w-md mx-auto mt-2 p-4 bg-gray-50 rounded-md">
+                                    <div class="space-y-4">
+                                        <div>
+                                            <label for="brightness" class="block text-sm font-medium text-gray-700 mb-1">
+                                                Brightness: <span id="brightnessValue">30</span>
+                                            </label>
+                                            <input type="range" id="brightness" min="0" max="100" value="30"
+                                                class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
+                                        </div>
+                                        <div>
+                                            <label for="contrast" class="block text-sm font-medium text-gray-700 mb-1">
+                                                Contrast: <span id="contrastValue">90</span>
+                                            </label>
+                                            <input type="range" id="contrast" min="0" max="100" value="90"
+                                                class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <button type="submit" class="w-full max-w-md mx-auto flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                                    Convert to ASCII Art
+                                </button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <div class="mt-4">
-                    <h4 class="text-sm font-medium text-gray-700 mb-2">Preview:</h4>
-                    <div id="preview" class="preview-container"></div>
+
+                <!-- Loading State -->
+                <div id="loading" class="hidden p-8 text-center">
+                    <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-blue-600 mx-auto mb-4"></div>
+                    <p class="text-gray-600">Converting your image to ASCII art...</p>
+                </div>
+
+                <!-- Result Section -->
+                <div id="result" class="hidden p-8 border-t border-gray-200">
+                    <div class="flex justify-between items-center mb-4">
+                        <h3 class="text-lg font-medium text-gray-800">Your ASCII Art</h3>
+                        <button id="copyBtn" class="px-3 py-1 text-sm bg-gray-100 hover:bg-gray-200 rounded">
+                            Copy to Clipboard
+                        </button>
+                    </div>
+                    <div class="result-container">
+                        <pre id="asciiOutput" class="ascii-output text-green-400 text-sm"></pre>
+                    </div>
+                    <div class="mt-4">
+                        <h4 class="text-sm font-medium text-gray-700 mb-2">Preview:</h4>
+                        <div id="preview" class="preview-container"></div>
+                    </div>
                 </div>
             </div>
         </div>
