--- a/web/static/converter.html
+++ b/web/static/converter.html
@@ -8,9 +8,13 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- External CSS -->
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
+    <!-- Project CSS -->
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
     <link href="css/converter.css" rel="stylesheet">
 </head>
@@ -54,7 +58,7 @@
         <div class="container mx-auto px-4 py-8">
             <header class="text-center mb-12">
                 <h1 class="font-bold text-white-800 mb-2 title-converter">Image to ASCII Art <span><img src="static/img/converter-ascii-00.png" class="glitchy"/>Converter</span></h1>
-                <p class="text-gray-600">Convert your images to beautiful ASCII art</p>
+                <h4>Convert your images into retro ASCII art</h4>
             </header>
 
             <div class="max-w-4xl mx-auto rounded-lg shadow-lg overflow-hidden">
@@ -70,7 +74,7 @@
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
                                         </svg>
                                         <h3 class="text-lg font-medium text-gray-700">Drag and drop your image here</h3>
-                                        <p class="text-sm text-gray-500">or click to browse files (PNG, JPG, JPEG)</p>
+                                        <h4>or click to browse files (PNG, JPG, JPEG)</h4>
                                     </div>
                                 </div>
 
@@ -88,30 +92,30 @@
                                     </div>
                                 </div>
 
-                                <button type="button" id="toggleAdvanced" class="w-full max-w-md mx-auto mt-2 text-sm text-blue-600 hover:text-blue-800 focus:outline-none">
+                                <button type="button" id="toggleAdvanced" class="w-full max-w-md">
                                     ▼ Advanced Settings
                                 </button>
 
                                 <div id="advancedSettings" class="hidden max-w-md mx-auto mt-2 p-4 bg-gray-50 rounded-md">
-                                    <div class="space-y-4">
+                                    <div class="container">
                                         <div>
-                                            <label for="brightness" class="block text-sm font-medium text-gray-700 mb-1">
-                                                Brightness: <span id="brightnessValue">30</span>
+                                            <label for="brightness">
+                                                Brightness: <span id="brightnessValue">50</span>
                                             </label>
-                                            <input type="range" id="brightness" min="0" max="100" value="30"
-                                                class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
+                                            <input type="range" id="brightness" min="0" max="100" value="50"
+                                                class="w-full rounded-lg appearance-none cursor-pointer">
                                         </div>
                                         <div>
-                                            <label for="contrast" class="block text-sm font-medium text-gray-700 mb-1">
-                                                Contrast: <span id="contrastValue">90</span>
+                                            <label for="contrast">
+                                                Contrast: <span id="contrastValue">50</span>
                                             </label>
-                                            <input type="range" id="contrast" min="0" max="100" value="90"
-                                                class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
+                                            <input type="range" id="contrast" min="0" max="100" value="50"
+                                                class="w-full rounded-lg appearance-none cursor-pointer">
                                         </div>
                                     </div>
                                 </div>
 
-                                <button type="submit" class="w-full max-w-md mx-auto flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                                <button type="submit" class="w-full max-w-md mx-auto flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                                     Convert to ASCII Art
                                 </button>
                             </div>
