--- a/web/static/player.html
+++ b/web/static/player.html
@@ -10,7 +10,14 @@
     <script type="text/javascript" src="js/palette_frame.js"></script>
     <script type="text/javascript" src="js/fps_runner.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
+
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
     <link href="css/player.css" type="text/css" rel="stylesheet"/>
 
