A favicon and a new version of AsciiC64Network
Former-commit-id: 86c4fdcf4cb7e2676c14d3fedbd139e0dd4b1b33

--- a/web/static/player.html
+++ b/web/static/player.html
@@ -21,6 +21,11 @@
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
     <link href="css/player.css" type="text/css" rel="stylesheet"/>
 
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-dark-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-dark-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body class="min-h-screen">
     <!-- Navigation Bar -->
